test-cases/negative/test_113_expect_error_wrong_syntax.lay
# negative test: expect error with wrong syntax
# expected: parser should reject this

expect error
  throw 'error'
is 'error message'


